--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login">
@@ -41,16 +42,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name="com.facebook.LoginActivity" />
+
         <activity
             android:name=".IntermediateActivity"
             android:label="@string/title_activity_intermediate"
             android:launchMode="singleInstance"/>
+
+        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen"-->
         <activity
             android:name=".ocr.CaptureActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+
             android:windowSoftInputMode="stateAlwaysHidden" />
+
         <activity
             android:name=".ocr.HelpActivity"
             android:screenOrientation="user">
@@ -59,6 +65,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity android:name=".ocr.PreferencesActivity" />
 
     </application>
