--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:recyclerview-v7:21.0.0'
+    // for the graphs in the home page
     compile 'com.jjoe64:graphview:3.1.3'
+    // for the images in general
+    compile 'com.squareup.picasso:picasso:2.4.0'
 }
