--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.jjoe64:graphview:3.1.3'
     // for the images in general
     compile 'com.squareup.picasso:picasso:2.4.0'
+    // floating action button for prelolipop devices
+    compile 'com.melnykov:floatingactionbutton:1.0.9'
 }
