--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     // floating action button for prelolipop devices
     compile 'com.melnykov:floatingactionbutton:1.0.9'
+    // implementing the Roboto styles
+    compile 'com.github.johnkil.android-robototextview:robototextview:2.2.0'
+
 }
