--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,11 +45,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name="com.facebook.LoginActivity" />
         <activity
@@ -74,7 +70,16 @@
         <activity android:name=".ocr.PreferencesActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main_drawer"></activity>
+            android:label="@string/title_activity_main_drawer" />
+        <activity
+            android:name=".IntroActivity"
+            android:label="@string/title_activity_instructions">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
