--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,8 +73,8 @@
             android:label="@string/title_activity_main_drawer" />
         <activity
             android:name=".IntroActivity"
-            android:label="@string/title_activity_instructions">
-            <intent-filter>
+            android:label="Usuario Lecturista">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
