--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,10 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':facebook')
     compile project(':tess-two')
     compile project(':viewPagerLibrary')
+    compile project(':ParseLoginUI')
+
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.0'
@@ -55,4 +56,7 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     // An interactive indicator to navigate between the different pages of a ViewPager
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+
+    provided 'com.facebook.android:facebook-android-sdk:3.21.1'
+
 }
