--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,9 +35,10 @@
             android:name=".LoginActivityBack"
             android:label="@string/title_activity_login"></activity>
         <activity
-            android:name=".IntermediateActivity"
+            android:name=".ServiceChooserActivity"
             android:label="@string/title_activity_intermediate"
-            android:launchMode="singleInstance" />
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" />
 
         <!-- android:theme="@android:style/Theme.NoTitleBar.Fullscreen" -->
         <activity
@@ -77,11 +78,13 @@
         <activity
             android:name="com.facebook.LoginActivity"
             android:label="@string/title_activity_login"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.parse.ui.ParseLoginActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
         <meta-data
                 android:name="com.parse.ui.ParseLoginActivity.PARSE_LOGIN_ENABLED"
                 android:value="true" />
@@ -94,7 +97,8 @@
         </activity>
         <activity
             android:name=".MeterRegistrationActivity"
-            android:label="@string/title_activity_meter_registration"></activity>
+            android:label="@string/title_activity_meter_registration"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
