--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,7 @@
         <activity
             android:name=".MeterRegistrationActivity"
             android:label="@string/title_activity_meter_registration"
+            android:theme="@style/AppTheme.BaseJmas"
             android:screenOrientation="portrait" />
         <activity
             android:name=".utilities.TestActivity"
