--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,9 +118,17 @@
             android:theme="@style/AppTheme.BaseJmas"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".camera.CameraScreenActivity"
+            android:theme="@style/AppTheme.BaseJmas"></activity>
+        <activity
+            android:name=".camera.DisplayActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.BaseJmas"></activity>
+
+        <activity
             android:name=".utilities.TestActivity"
             android:label="@string/title_activity_test"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <service android:name="com.parse.PushService" />
 
