--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:value="1" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.fourtails.usuariolecturista.model.CreditCard,com.fourtails.usuariolecturista.model.Meter,com.fourtails.usuariolecturista.model.RegisteredUser,com.fourtails.usuariolecturista.model.ChartReading" />
+            android:value="com.fourtails.usuariolecturista.model.CreditCard,com.fourtails.usuariolecturista.model.Meter,com.fourtails.usuariolecturista.model.RegisteredUser,com.fourtails.usuariolecturista.model.ChartReading,com.fourtails.usuariolecturista.model.ChartBill" />
 
         <activity
             android:name=".LoginActivityBack"
@@ -119,11 +119,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".camera.CameraScreenActivity"
-            android:theme="@style/AppTheme.BaseJmas"></activity>
+            android:theme="@style/AppTheme.BaseJmas" />
         <activity
             android:name=".camera.DisplayActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.BaseJmas"></activity>
+            android:theme="@style/AppTheme.BaseJmas" />
 
         <activity
             android:name=".utilities.TestActivity"
