--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
     compile 'com.google.apis:google-api-services-storage:v1-rev26-1.19.1'
     // Camera
     compile 'com.commonsware.cwac:camera:0.6.+'
+    // Credit Card
+    compile 'com.stripe:stripe-android:+'
 }
