push icons and registerImageName on Backend

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,7 +149,7 @@
 
         <meta-data
             android:name="com.parse.push.notification_icon"
-            android:resource="@drawable/push_icon" />
+            android:resource="@drawable/push_icon_white" />
     </application>
 
 </manifest>
