--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,6 @@ dependencies {
         // exclusion is not necessary, but generally a good idea.
         exclude group: 'com.google.android', module: 'support-v4'
     }
+    // pretty logs
+    compile 'com.orhanobut:logger:1.8'
 }
