Mayor Refactor, we are getting rid of AsyncTask and adopting the priority-jobqueue, plus we overrode the otto bus so we always post to the main thread

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
     }
     // pretty logs
     compile 'com.orhanobut:logger:1.8'
+    // better background jobs
+    compile 'com.birbit:android-priority-jobqueue:1.3.1'
 }
