--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.jjoe64:graphview:3.1.3'
     // for the images in general
     compile 'com.squareup.picasso:picasso:2.4.0'
-    // floating action button for prelolipop devices
+    // floating action button for pre-lollipop devices
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     // implementing the Roboto styles
     compile 'com.github.johnkil.android-robototextview:robototextview:2.3.0'
@@ -75,8 +75,6 @@ dependencies {
     // GCS
     compile 'com.google.http-client:google-http-client-jackson2:1.19.0'
     compile 'com.google.apis:google-api-services-storage:v1-rev26-1.19.1'
-    // Camera
-    compile 'com.commonsware.cwac:camera:0.6.+'
     // Credit Card
     compile 'com.stripe:stripe-android:+'
     // Crouton: Toast like alerts
