--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -37,51 +37,52 @@ dependencies {
     compile project(':chartLibrary')
     compile project(':backend')
     // Module dependency on ParseUI libraries sources
-    compile 'com.parse:parseui-login-android:0.0.1'
-    compile 'com.parse:parseui-widget-android:0.0.1'
-    compile 'com.parse:parse-android:1.12.0'
     // Support Libraries
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
     // for the graphs in the home page
-    compile 'com.jjoe64:graphview:3.1.3'
     // for the images in general
-    compile 'com.squareup.picasso:picasso:2.5.2'
     // floating action button for pre-lollipop devices
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
     // implementing the Roboto styles
-    compile 'com.github.johnkil.android-robototextview:robototextview:2.3.0'
     // View "injection" Library
-    compile 'com.jakewharton:butterknife:7.0.1'
     // enhanced event bus
-    compile 'com.squareup:otto:1.3.6'
     // ActiveAndroid ORM (Object Relational Mapper)
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     // An interactive indicator to navigate between the different pages of a ViewPager
-    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     //backend
-    compile 'com.google.http-client:google-http-client-gson:1.19.0'
-    compile 'com.google.http-client:google-http-client-android:1.19.0'
-    compile 'com.google.code.gson:gson:2.3'
     // Facebook
-    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     // Parse
-    compile 'com.parse.bolts:bolts-android:1.+'
-    compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
     // GCS
-    compile 'com.google.http-client:google-http-client-jackson2:1.19.0'
-    compile 'com.google.apis:google-api-services-storage:v1-rev26-1.19.1'
     // Credit Card
-    compile 'com.stripe:stripe-android:+'
     // Crouton: Toast like alerts
     compile('de.keyboardsurfer.android.widget:crouton:1.8.5@aar') {
         //exclusion is not necessary, but generally a good idea.
         exclude group: 'com.google.android', module: 'support-v4'
     }
     // pretty logs
-    compile 'com.orhanobut:logger:1.8'
     // better background jobs
+    compile 'com.parse:parseui-login-android:0.0.1'
+    compile 'com.parse:parseui-widget-android:0.0.1'
+    compile 'com.parse:parse-android:1.12.0'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.jjoe64:graphview:3.1.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.github.johnkil.android-robototextview:robototextview:2.3.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup:otto:1.3.6'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.google.http-client:google-http-client-gson:1.19.0'
+    compile 'com.google.http-client:google-http-client-android:1.19.0'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
+    compile 'com.google.http-client:google-http-client-jackson2:1.19.0'
+    compile 'com.google.apis:google-api-services-storage:v1-rev26-1.19.1'
+    compile 'com.stripe:stripe-android:+'
+    compile 'com.orhanobut:logger:1.8'
     compile 'com.birbit:android-priority-jobqueue:1.3.1'
+    compile 'com.android.support:design:23.1.1'
 }
